# tife-mono

docs/: graphs
tife/: Cargo.toml
tife/src/: main.rs  state.rs
tife/src/screen/: test.rs
wcore/: Cargo.toml
wcore/src/: audio.rs  clock.rs  lib.rs
wcore/src/graphics/: bindable.rs  camera.rs  context.rs  drawable.rs  mod.rs  scene.rs  screen.rs  texture.rs  uniform.rs  utils.rs
wcore/src/graphics/pipeline/: mod.rs  model.rs  model.wgsl
wcore/src/graphics/pipeline/shader/: scene.rs
wcore/src/graphics/primitive/mesh/: instanced.rs  mod.rs  simple.rs
wcore/src/graphics/primitive/mesh/data/: mod.rs  model.rs  vertex.rs
