[package]
name = "wcore"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.2.5"
winit = "0.27.5"
fxhash = "0.2.1"
instant = "0.1.12"
wgpu = "0.14.2"
image = "0.24.5"
cgmath = "0.18.0"
bytemuck = "1.12.3"
color-eyre = "0.6.2"

fragile = "1.2.1"
log = "0.4.17"
cpal = "0.14.0"
rubato = "0.12.0"
symphonia = { version = "0.5.1", features = ["mp3"] }
itertools = "0.10.5"
crossbeam = "0.8.2"